# MoneRig-miner

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  api.c  api.h  docker-compose.yml  http_sub.h  service.yml  utils.c  utils.h
cmake/: FindUV.cmake
monerig/core/amd/: Worker.cpp  Worker.h  main.cpp
monerig/core/cpu/: lock.h  miner.cpp  miner.h
scripts/: config.h
stratum/: stratum.h
